Updated empty view.

--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -1,8 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_launcher"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,6 +16,8 @@
         android:gravity="center"
         android:text="@string/empty_bookshelf"
         android:textColor="@color/tv_desc_color"
-        android:textSize="@dimen/font_size_middle" />
+        android:textSize="@dimen/font_size_middle"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/tv_empty" />
 
 </LinearLayout>
