--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -7,19 +7,9 @@
     <ListView
         android:id="@+id/listview_common"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:listSelector="@drawable/item_common_bg" >
     </ListView>
-
-    <TextView
-        android:id="@+id/tv_empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/empty_chapter"
-        android:textColor="@color/tv_desc_color"
-        android:textSize="@dimen/font_size_middle" />
-
     <include layout="@layout/layout_loading" />
 
 </RelativeLayout>
