--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -7,13 +7,15 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_launcher"/>
+        android:background="@drawable/ic_launcher"
+        android:id="@+id/iv_empty" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
+        android:layout_marginTop="16dp"
         android:text="@string/empty_bookshelf"
         android:textColor="@color/tv_desc_color"
         android:textSize="@dimen/font_size_middle"
