--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -2,24 +2,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:id="@+id/layout_empty"
+    android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/iv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_launcher"
-        android:id="@+id/iv_empty" />
+        android:background="@drawable/ic_launcher" />
 
     <TextView
+        android:id="@+id/tv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:gravity="center"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
+        android:gravity="center"
         android:text="@string/empty_bookshelf"
         android:textColor="@color/tv_desc_color"
-        android:textSize="@dimen/font_size_middle"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/tv_empty" />
+        android:textSize="@dimen/font_size_middle" />
+
+    <Button
+        android:id="@+id/btn_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:visibility="gone"
+        android:background="@drawable/btn_hollow_yellow"
+        android:text="@string/app_name"
+        android:textColor="@color/btn_yellow_text_color"
+        android:textSize="@dimen/font_size_middle" />
 
 </LinearLayout>
