--- a/app/src/main/res/drawable/btn_hollow_yellow_n.xml
+++ b/app/src/main/res/drawable/btn_hollow_yellow_n.xml
@@ -11,7 +11,7 @@
         android:width="10dp" />
 
     <stroke
-        android:width="1px"
+        android:width="1dp"
         android:color="@color/main_dress_color" />
 
 </shape>
