--- a/app/src/main/res/layout/activity_book_intro.xml
+++ b/app/src/main/res/layout/activity_book_intro.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_second_bg_color"
+    android:overScrollMode="never"
     android:scrollbars="none" >
 
     <LinearLayout
