--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -15,7 +15,7 @@
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:layout_marginTop="-48dp"
-        android:background="@color/action_bar_bg_color"
+        android:background="@color/reader_menu_bg_color"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -30,7 +30,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/ic_action_back_big" />
+                android:background="@drawable/ic_action_home" />
 
         </LinearLayout>
 
@@ -57,6 +57,15 @@
             android:text="@string/book_intro_add"
             android:textColor="@color/action_bar_text_color"
             android:textSize="@dimen/font_size_action_title" />
+
+        <ImageView
+            android:id="@+id/btn_source"
+            android:layout_width="54dp"
+            android:layout_height="fill_parent"
+            android:background="@drawable/action_bar_item_bg"
+            android:gravity="center_vertical"
+            android:scaleType="center"
+            android:src="@drawable/ic_action_source" />
 
     </LinearLayout>
 
