--- a/app/src/main/res/layout/fragment_bookshelf.xml
+++ b/app/src/main/res/layout/fragment_bookshelf.xml
@@ -7,6 +7,7 @@
         style="@style/Pull_To_Refresh"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:footerDividersEnabled="false"
         android:listSelector="@drawable/item_common_bg" >
     </com.handmark.pulltorefresh.library.PullToRefreshListView>
 
