--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,12 +2,13 @@
 <resources>
 
     <!-- Default item padding in a ListView. -->
-    <dimen name="default_padding">14dp</dimen>
+    <dimen name="default_padding">16dp</dimen>
     <dimen name="default_item_padding">14dp</dimen>
     <dimen name="default_item_padding_vertical">10dp</dimen>
     <dimen name="default_item_padding_horizontal">16dp</dimen>
     <dimen name="default_item_padding_small">5dp</dimen>
     <dimen name="default_activity_padding">10dp</dimen>
+    <dimen name="action_btn_height">48dp</dimen>
 
     <!-- Font Size -->
     <dimen name="font_size_action_title">18sp</dimen>
