Update res files.

--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -6,10 +6,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="26dp"
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/layout_user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/main_bg_color"
@@ -20,13 +21,14 @@
                 android:id="@+id/iv_avatar"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:background="@color/main_night_bg_color" />
+                android:src="@drawable/default_avatar"
+                android:scaleType="centerCrop" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:gravity="center_vertical"
+                android:orientation="vertical"
                 android:paddingLeft="@dimen/default_padding"
                 android:paddingRight="@dimen/default_padding">
 
@@ -34,15 +36,15 @@
                     android:id="@+id/tv_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Eric"
+                    android:text="未登陆"
                     android:textColor="@color/tv_title_color"
                     android:textSize="@dimen/font_size_big" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LV1"
                     android:layout_marginTop="5dp"
+                    android:visibility="gone"
                     android:textColor="@color/tv_desc_color"
                     android:textSize="@dimen/font_size_middle" />
 
@@ -56,14 +58,15 @@
             android:text="我的评论" />
 
         <TextView
+            android:id="@+id/tv_feed_back"
             style="@style/ItemMe"
-            android:text="意见反馈" />
+            android:text="@string/action_feedback" />
 
         <TextView
             android:id="@+id/tv_set"
             style="@style/ItemMe"
             android:layout_marginTop="16dp"
-            android:text="设置" />
+            android:text="@string/str_set" />
 
     </LinearLayout>
 
