--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,93 +28,13 @@
                 android:contentDescription="@string/str_empty" />
         </RelativeLayout>
 
-        <LinearLayout
-            android:id="@+id/layout_main_menu"
-            android:layout_width="match_parent"
+        <GridView
+            android:id="@+id/gv_menu"
+            android:layout_width="fill_parent"
             android:layout_height="56dp"
-            android:background="@android:color/white"
-            android:baselineAligned="false"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:listSelector="@drawable/item_common_bg"
+            android:numColumns="3"></GridView>
 
-            <LinearLayout
-                android:id="@+id/layout_book_shelf"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="@drawable/item_common_bg"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/iv_book_shelf"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/ic_main_menu_fav_s"
-                    android:contentDescription="@string/str_empty" />
-
-                <TextView
-                    android:id="@+id/tv_book_shelf"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/str_book_shelf"
-                    android:textColor="@color/main_dress_color"
-                    android:textSize="@dimen/font_size_12" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_book_city"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="@drawable/item_common_bg"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/iv_book_city"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/icon_main_bookcity_n"
-                    android:contentDescription="@string/str_empty" />
-
-                <TextView
-                    android:id="@+id/tv_book_city"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/str_book_library"
-                    android:textColor="@color/tv_desc_color"
-                    android:textSize="@dimen/font_size_12" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_me"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="@drawable/item_common_bg"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/iv_me"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/icon_main_bookcity_n"
-                    android:contentDescription="@string/str_empty" />
-
-                <TextView
-                    android:id="@+id/tv_me"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/str_me"
-                    android:textColor="@color/tv_desc_color"
-                    android:textSize="@dimen/font_size_12" />
-            </LinearLayout>
-        </LinearLayout>
     </LinearLayout>
 
     <ImageView
