--- a/app/src/main/res/layout/dialog_l_list.xml
+++ b/app/src/main/res/layout/dialog_l_list.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:listSelector="@android:color/transparent"
         android:overScrollMode="never"
+        android:divider="@android:color/transparent"
         android:scrollbars="none" />
 
 </RelativeLayout>
