--- a/libraries/devUtils/src/main/res/layout/loading.xml
+++ b/libraries/devUtils/src/main/res/layout/loading.xml
@@ -6,9 +6,8 @@
 
     <ProgressBar
         android:id="@+id/progressBar1"
-        style="@style/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerInParent="true"
         android:padding="10dp" />
 
