--- a/app/src/main/res/layout/activity_book_intro.xml
+++ b/app/src/main/res/layout/activity_book_intro.xml
@@ -9,8 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/default_padding" >
+        android:orientation="vertical"  >
 
         <LinearLayout
             android:id="@+id/layout_intro_top"
@@ -120,7 +119,6 @@
             android:id="@+id/layout_intro_center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_padding"
             android:background="@android:color/white"
             android:orientation="vertical"
             android:paddingBottom="@dimen/default_padding" >
@@ -155,16 +153,13 @@
             android:id="@+id/layout_related"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_padding"
             android:background="@android:color/white"
             android:orientation="vertical" >
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/default_padding"
-                android:paddingLeft="@dimen/default_padding"
-                android:paddingTop="@dimen/default_padding"
+                android:padding="@dimen/default_padding"
                 android:text="@string/book_intro_related"
                 android:textColor="@color/tv_title_color"
                 android:textSize="@dimen/font_size_middle"  />
