--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -41,7 +41,7 @@
                     android:textSize="@dimen/font_size_big" />
 
                 <TextView
-                    android:id="@+id/tv_exp"
+                    android:id="@+id/tv_level"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
