--- a/app/src/main/res/drawable/btn_hollow_blue_s.xml
+++ b/app/src/main/res/drawable/btn_hollow_blue_s.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <corners android:radius="2dp" />
+    <corners android:radius="0dp" />
 
-    <solid android:color="@color/main_dress_color" />
+    <solid android:color="@color/blue_s" />
 
     <size
         android:height="10dp"
@@ -12,6 +12,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/main_dress_color" />
+        android:color="@color/blue_s" />
 
 </shape>
