--- a/app/src/main/res/layout/activity_book_intro.xml
+++ b/app/src/main/res/layout/activity_book_intro.xml
@@ -78,7 +78,7 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="55dp"
+            android:layout_height="58dp"
             android:background="@android:color/white"
             android:orientation="horizontal"
             android:paddingBottom="@dimen/default_padding"
@@ -109,13 +109,8 @@
                 android:textSize="@dimen/font_size_middle" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/iv_shadow1"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@color/main_shadow_color" />
-
         <LinearLayout
+            android:layout_marginTop="@dimen/default_padding_big"
             android:id="@+id/layout_intro_center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -143,14 +138,9 @@
                 android:textSize="@dimen/font_size_small" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/iv_shadow2"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@color/main_shadow_color" />
-
         <LinearLayout
             android:id="@+id/layout_related"
+            android:layout_marginTop="@dimen/default_padding_big"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
@@ -172,12 +162,6 @@
                 android:numColumns="4"
                 android:scrollbars="none" >
             </ListView>
-
-            <ImageView
-                android:id="@+id/iv_shadow3"
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/main_shadow_color" />
         </LinearLayout>
     </LinearLayout>
 
