Updated res files.

--- a/app/src/main/res/layout/dialog_l_container.xml
+++ b/app/src/main/res/layout/dialog_l_container.xml
@@ -5,7 +5,7 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:alpha="0.5"
+        android:alpha="0.6"
         android:background="@android:color/black" />
 
     <LinearLayout
@@ -14,22 +14,26 @@
         android:layout_centerInParent="true"
         android:layout_margin="24dp"
         android:background="@drawable/my_dialog_bg"
-        android:paddingBottom="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="16dp">
 
         <TextView
             android:id="@+id/tv_dialog_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:paddingBottom="16dp"
+            android:paddingBottom="26dp"
             android:paddingLeft="26dp"
             android:paddingRight="26dp"
             android:paddingTop="26dp"
-            android:textColor="@color/tv_title_color"
-            android:textStyle="bold"
             android:text="@string/app_name"
-            android:textSize="@dimen/font_size_big" />
+            android:textColor="@color/main_dress_color"
+            android:textSize="@dimen/font_size_huge" />
+
+        <ImageView
+            style="@style/ImageDivider"
+            android:layout_marginLeft="22dp"
+            android:layout_marginRight="22dp" />
 
         <LinearLayout
             android:id="@+id/layout_dialog_content"
