--- a/app/src/main/res/layout/dialog_l_container.xml
+++ b/app/src/main/res/layout/dialog_l_container.xml
@@ -31,9 +31,22 @@
             android:textSize="@dimen/font_size_huge" />
 
         <ImageView
+            android:id="@+id/iv_divider"
             style="@style/ImageDivider"
             android:layout_marginLeft="22dp"
             android:layout_marginRight="22dp" />
+
+        <TextView
+            android:id="@+id/tv_dialog_msg"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:paddingBottom="26dp"
+            android:paddingLeft="26dp"
+            android:paddingRight="26dp"
+            android:text="@string/app_name"
+            android:textColor="@color/tv_desc_color"
+            android:textSize="@dimen/font_size_middle" />
 
         <LinearLayout
             android:id="@+id/layout_dialog_content"
