--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,9 @@
 
         <GridView
             android:id="@+id/gv_menu"
+            style="@style/ListSelectorBorderless"
             android:layout_width="fill_parent"
             android:layout_height="56dp"
-            android:listSelector="@drawable/item_common_bg"
             android:numColumns="3"></GridView>
 
     </LinearLayout>
