--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -21,8 +21,8 @@
                 android:id="@+id/iv_avatar"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:src="@drawable/default_avatar"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/default_avatar" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,30 +45,46 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:visibility="visible"
-                    android:textColor="@color/tv_desc_color"
                     android:text="LV.1 (0/255)"
-                    android:textSize="@dimen/font_size_middle" />
+                    android:textColor="@color/tv_desc_color"
+                    android:textSize="@dimen/font_size_middle"
+                    android:visibility="visible" />
 
             </LinearLayout>
 
         </LinearLayout>
 
-        <TextView
-            style="@style/ItemMe"
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="我的评论" />
+            android:background="@android:color/white"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_feed_back"
-            style="@style/ItemMe"
-            android:text="@string/action_feedback" />
+            <TextView
+                style="@style/ItemMe"
+                android:text="我的评论" />
 
-        <TextView
-            android:id="@+id/tv_set"
-            style="@style/ItemMe"
+            <TextView
+                android:id="@+id/tv_feed_back"
+                style="@style/ItemMe"
+                android:text="@string/action_feedback" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/str_set" />
+            android:background="@android:color/white">
+
+            <TextView
+                android:id="@+id/tv_set"
+                style="@style/ItemMe"
+                android:text="@string/str_set" />
+        </LinearLayout>
+
 
     </LinearLayout>
 
