--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <!-- ActionBar -->
+    <color name="status_bar_bg_color">#b63120</color>
     <color name="action_bar_bg_color">#da4336</color>
     <color name="action_bar_overlay_color">#00505050</color>
     <color name="action_bar_text_color">#e6e6e6</color>
